[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "luta-mem0"
version = "0.1.0"
description = "Luta customized Mem0 agent memory"
requires-python = ">=3.9,<4.0"
dependencies = [
    "qdrant-client>=1.9.1",
    "pydantic>=2.7.3",
    "openai>=1.33.0",
    "posthog>=3.5.0",
    "pytz>=2024.1",
    "sqlalchemy>=2.0.31",
]

[project.optional-dependencies]
vector_stores = [
    "chromadb>=0.4.24",
    "weaviate-client>=4.4.0",
    "pinecone-client>=3.0.0",
    "faiss-cpu>=1.7.4",
]
